# knowledge-fidelity

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  ROADMAP.md  Research_Notes.md  nli_smoke_test_plan.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker-publish.yml
data/contrastive/: calculator_pairs.json  format_pairs.json  nli_pairs.json  primitive_pairs.json  subitizing_pairs.json
deployment/: export_gguf.py  mlx_recipe.md  vllm_benchmark.py
docs/: anomaly_detection.json  auto_report.md  dashboard.html  gamma_bounds_analysis.json  highway_density.json  internal_space_comparison.json  probe_impact_report.json  probe_landscape.json  tradeoff_frontier.json
examples/: quick_demo.py
experiments/: 7b_entropy_map.sh  ablation_sft_mlx.py  analyze_ablation_stats.py  analyze_margin_sweep.py  analyze_sweep_stats.py  attack_defense_asymmetry.py  audit_merged_models.py  bo_prototype.py  bridge_feasibility_mlx.py  calibration_eval_mlx.py  cat_sae_mlx.py  catsae_age_override.py  cross_behavioral_sweep.py  demo_steering_modes.py  diagnose_bias_7b.py  diagnose_bias_7b_mlx.py  doer.py  external_eval_mlx.py  fidelity_bench.py  fidelity_bench_2.py  freeze_ratio_sweep.py  full_pipeline_runner.py  grassmann_trajectory.py  grassmann_trajectory_runner.py  hybrid_control_sweep.py  job_queue.json  joint_ablation.py  margin_sweep.sh  merge_ablation_results.py  mistral_layer_heatmap.py  multi_vector_steering.py  ood_validation_mlx.py  overnight_mar1.sh  overnight_run.sh  overnight_sweep.py  plot_cocktail_tradeoff.py  plot_combined_killzone.py  plot_freeze_sweep.py  plot_llama_heatmap.py  plot_main_results.py  (+26 more)
experiments/developmental_sweep/: cross_model_subspace_analysis.py  extract_svd_spectrum.py  run_5M_remaining.sh  run_sweep.sh
experiments/operation_destroyer/: FINDINGS.md  PLAN.md  autoresearch.py  build_distractors.py  build_extended_truth_dicts.py  build_stem_benchmark.py  diagnose_adapter.py  diagnose_quick.py  diagnose_v11.py  diagnose_v5.py  eval_comprehensive.py  eval_mc.py  eval_mc_syco.py  eval_stem_crossmodel.py  eval_truth_recall.py  monitor_and_eval.sh  phase1a_maxshift_test.py  stem_bench_all.json  stem_bench_calculus.json  stem_bench_chemistry.json  stem_bench_constants.json  stem_bench_linear_algebra.json  stem_bench_physics.json  stem_bench_statistics.json  test_tf_concept.py  toy.py  toy_sun_blackhole.py  train_mc.py  train_v2_run.py  train_v3.py  train_v3_data_v2.py  truth_dict.json  truth_dict_all_contrastive.json  truth_dict_astronomy_contrastive.json  truth_dict_biology_contrastive.json  truth_dict_chemistry_contrastive.json  truth_dict_contrastive.json  truth_dict_logic_math_contrastive.json  truth_dict_mega_contrastive.json  truth_dict_programming_contrastive.json  (+1 more)
experiments/operation_frontier/: CLAUDE.md  README.md  autonomy_loop.py  h_minus_lz_training.json  hunt_vortex.py  oracle_wrapper.py  requirements.txt  train_choreography_adapter.py  train_vortex_adapter.py  vortex_aligned_30.json
experiments/primitive_hierarchy/: run_phase1.sh  run_phase2.sh  run_phase3.sh
experiments/scale_ladder/: analyze_phase_transition.py  analyze_scaling.py  audit_hires_subspaces.py  configs.py  extract_transition_geometry.py  phase_transition_18m_hires.py  phase_transition_hires.py  plot_combined_transition.py  quick_audit_18m.py  run_all.sh  scale_audit.py  train_contrastive.py  train_geometric.py  train_model.py
experiments/snap_on/: logit_shift_analyzer.py  run_overnight.sh  train.py
notebooks/: fidelity_demo.ipynb
paper/: knowledge_fidelity_paper.tex  rho_guided_sft.md
paper/tables/: ablation.tex  correlation.tex  dose_response.tex  hybrid_sweep.tex  variance.tex
results/: cf90_multiseed_Qwen2.5-0.5B.json  cf90_multiseed_Qwen2.5-7B-Instruct.json  fidelity_bench_Qwen2.5-0.5B.json  joint_ablation_Qwen2.5-0.5B.json  joint_ablation_Qwen2.5-7B-Instruct.json  mistral_7b_combined.json
results/alignment/: ablation_5seed_analysis.json  ablation_Qwen_Qwen2.5-7B-Instruct.json  ablation_Qwen_Qwen2.5-7B-Instruct_merged.json  ablation_Qwen_Qwen2.5-7B-Instruct_s456_789_1337.json  ablation_analysis.json  calibration_Qwen_Qwen2.5-7B-Instruct.json  external_eval_Qwen_Qwen2.5-7B-Instruct.json  llama8b_2seed_analysis.json  mlx_no_margin_Qwen_Qwen2.5-7B-Instruct.json  mlx_rho_sft_sweep_7B_seeds42_123.json  mlx_rho_sft_sweep_Qwen_Qwen2.5-0.5B.json  mlx_rho_sft_sweep_Qwen_Qwen2.5-7B-Instruct.json  mlx_rho_sft_sweep_Qwen_Qwen2.5-7B-Instruct_s789_1337.json  mlx_rho_sft_sweep_mlx-community_Meta-Llama-3.1-8B-Instruct-4bit_s42_123.json  ood_Qwen_Qwen2.5-7B-Instruct.json  qwen7b_3seed_analysis.json  safety_stress_test_qwen2.5-7b.json  truthfulqa_Qwen_Qwen2.5-7B-Instruct.json
results/attack_defense/: baseline_audit.json  deception_features.json  (+3 more)
scripts/: activation_steering.py  anomaly_detection.py  attention_routing_analysis.py  build_master_db.py  compute_decon_scores.py  confidence_shift.py  contrastive_decoding.py  entanglement_heatmap.py  entropy_trajectory.py  format_forced_decoding.py  format_forced_full_scale.py  format_only_latent_intelligence.py  gamma_bounds_analysis.py  generate_bridge_probes.py  generate_bridge_probes_v2.py  generate_calculator_pairs.py  generate_format_pairs.py  generate_hard_sycophancy_probes.py  generate_latex_tables.py  generate_nli_pairs.py  generate_report.py  generate_subitizing_pairs.py  generation_trajectory.py  head_mapping.py  highway_density.py  internal_space_comparison.py  invariant_gate.py  kv_cache_analysis.py  logit_lens_readout_gate.py  logit_lens_readout_gate_v2.py  logit_lens_readout_gate_v3.py  mmlu_contrastive_decoding.py  mmlu_gate_experiment.py  ov_circuit_logit_attribution.py  plot_contrastive_paper4.py  plot_figure2_subspace.py  plot_figure3_decon.py  plot_panel_c_standalone.py  presample_deception_probes.py  presample_probes.py  (+6 more)
spaces/: README.md  app.py  requirements.txt
tests/: conftest.py  test_alignment.py  test_benchmarking.py  test_cli.py  test_interpretability.py  test_metrics.py  test_output.py  test_probes.py  test_registry.py  test_steering.py  test_surgery.py
(+187 files in other folders)
