[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "knowledge-fidelity"
version = "0.1.0"
description = "Compress LLMs while auditing whether they still know truth vs myths. SVD compression + false-belief detection in one toolkit."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bryan Sanchez"},
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
cartography = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm",
]
eval = [
    "lm-eval>=0.4",
    "datasets",
]
deploy = [
    "safetensors",
]
full = [
    "knowledge-fidelity[cartography,eval,deploy]",
    "mlx>=0.5; sys_platform == 'darwin'",
    "mlx-lm>=0.5; sys_platform == 'darwin'",
]
dev = [
    "knowledge-fidelity[full]",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/SolomonB14D3/knowledge-fidelity"
Repository = "https://github.com/SolomonB14D3/knowledge-fidelity"
Issues = "https://github.com/SolomonB14D3/knowledge-fidelity/issues"

[tool.setuptools.packages.find]
where = ["src"]
