[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-fidelity"
version = "0.2.1"
description = "Compress LLMs while auditing whether they still know truth vs myths. SVD compression + false-belief detection in one toolkit."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Bryan Sanchez"},
]
keywords = [
    "llm", "compression", "svd", "knowledge", "false-beliefs",
    "interpretability", "confidence", "mandela-effect", "transformers",
    "model-auditing", "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
cartography = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm",
]
eval = [
    "lm-eval>=0.4",
    "datasets",
]
deploy = [
    "safetensors",
]
demo = [
    "knowledge-fidelity[cartography]",
    "gradio>=4.0",
    "pandas",
]
full = [
    "knowledge-fidelity[cartography,eval,deploy,demo]",
    "mlx>=0.5; sys_platform == 'darwin'",
    "mlx-lm>=0.5; sys_platform == 'darwin'",
]
dev = [
    "knowledge-fidelity[full]",
    "pytest",
]

[project.scripts]
knowledge-fidelity = "knowledge_fidelity.__main__:main"

[project.urls]
Homepage = "https://github.com/SolomonB14D3/knowledge-fidelity"
Repository = "https://github.com/SolomonB14D3/knowledge-fidelity"
Issues = "https://github.com/SolomonB14D3/knowledge-fidelity/issues"

[tool.setuptools.packages.find]
where = ["src"]
