[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rho-eval"
version = "2.2.0"
description = "Behavioral auditing toolkit for LLMs — audit any model across 8 dimensions (factual, toxicity, bias, sycophancy, reasoning, refusal, deception, over-refusal) using teacher-forced confidence probes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Bryan Sanchez"},
]
keywords = [
    "llm", "behavioral-audit", "rho-eval", "rho-audit",
    "model-auditing", "false-beliefs", "confidence", "interpretability",
    "truthfulness", "bias-detection", "sycophancy", "toxicity",
    "svd", "compression", "knowledge-fidelity",
    "transformers", "pytorch", "mandela-effect",
    "steering-vectors", "activation-engineering",
    "model-merging", "mergekit", "mechanistic-interpretability",
    "fidelity-bench", "truth-gap", "adversarial-benchmark",
    "rho-guided-sft", "alignment", "supervised-fine-tuning",
    "calibration-repair", "contrastive-loss", "mlx", "apple-silicon",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "numpy",
    "scipy",
    "datasets>=2.0",
]

[project.optional-dependencies]
cartography = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm",
]
eval = [
    "lm-eval>=0.4",
    "datasets>=2.0",
]
deploy = [
    "safetensors",
]
align = [
    "peft>=0.7",
    "datasets>=2.0",
]
demo = [
    "rho-eval[cartography]",
    "gradio>=4.0",
    "pandas",
]
full = [
    "rho-eval[cartography,eval,deploy,demo,align]",
    "mlx>=0.5; sys_platform == 'darwin'",
    "mlx-lm>=0.5; sys_platform == 'darwin'",
]
dev = [
    "rho-eval[full]",
    "pytest",
]

[project.scripts]
rho-eval = "rho_eval.cli.rho_audit:main"
rho-audit = "rho_eval.cli.rho_audit:main"
rho-compress = "rho_eval.__main__:main"
rho-interpret = "rho_eval.cli.rho_interpret:main"
rho-align = "rho_eval.cli.rho_align:main"
rho-steer = "rho_eval.cli.rho_steer:main"
rho-bench = "rho_eval.cli.rho_bench:main"

[project.urls]
Homepage = "https://github.com/SolomonB14D3/knowledge-fidelity"
Repository = "https://github.com/SolomonB14D3/knowledge-fidelity"
Issues = "https://github.com/SolomonB14D3/knowledge-fidelity/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rho_eval*", "knowledge_fidelity*"]

[tool.setuptools.package-data]
"rho_eval.probes" = ["data/**/*.json"]
"knowledge_fidelity.probes" = ["data/**/*.json"]
